--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1282,6 +1282,7 @@ ul#top_menu li a.profile_bt:before {
 @media (max-width: 767px) {
   .hero_single.version_2 {
     height: 480px;
+    background-position: 35% center;
   }
 }
 .hero_single.version_2 .opacity-mask h1,
